Fix typewriter spacing

--- a/assets/css/pages/landing/header.scss
+++ b/assets/css/pages/landing/header.scss
@@ -41,8 +41,11 @@
                 .typed-cursor {
                     font-weight: 200;
                 }
+                .save {
+                    margin-right: 4px;
+                }
                 .internet {
-                    margin-left: -5px;
+                    margin-left: -6px;
                 }
 
             }
